--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
   - node
 script:
   - npm install
-  - npm audit fix
+  - npm audit fix --force
   - npm run build
 notifications:
   email: false
